--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,9 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')    // springboot용 spring Data Jpa 추상화 라이브러리
+                                                                        // springboot버전에 맞춰 자동으로 JPA관련 lib의 버전을 관리
+    compile('com.h2database:h2')                                        // 인메모리 관계형 DB, 메모리에서 실행됨(test용도)
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
